<resources>
    <string name="app_name">记忆笔记</string>
    <string name="please_input_word">请输入单词</string>
    <string name="word_meaning">词义</string>
    <string name="similar_form_word">近似词</string>
    <string name="remember_way">记忆法</string>
    <string name="word_root_affix">词根词缀</string>
    <string name="strange_degree">不熟悉度</string>
    <string name="last_remember_time">上次记忆时间</string>
    <string name="edit">编辑</string>
    <string name="edit_save">保存</string>
    <string name="word_format_erorr">单词或短语格式错误，保存失败</string>
    <string name="word_repetitive">单词重复，保存失败"</string>
    <string name="word_repetitive_can_not_save">单词重复，无法保存"</string>
    <string name="word_name_is_null">单词名为空，保存失败</string>
    <string name="word_invalid_format_erorr">单词或短语格式错误</string>
    <string name="word_invalid_repetitive">单词重复</string>
    <string name="word_invalid_name_is_null">单词名为空</string>
    <string name="caommand_hint">搜索</string>
    <string name="delete">删除</string>
    <string name="certain_delete">确定删除吗</string>
    <string name="cetain_leave_in_edit">正在编辑单词，你确定离开吗？</string>
    <string name="word_group">词组</string>
    <string name="word_root">词根：</string>
    <string name="word_prefix">前缀：</string>
    <string name="word_suffix">后缀：</string>
    <string name="next">下一个</string>
    <string name="word_synonym">近义词</string>
    <string name="upload_date">上传数据</string>
    <string name="log_in">登陆</string>
    <string name="login_already">已登录</string>
    <string name="vip_service">vip服务</string>
    <string name="open_vip">开通</string>
    <string name="open_vip_already">已开通</string>
    <string name="data">数据</string>
    <string name="vip_service_illustrate">开通VIP服务后可将享受单词导出为Excel以及免广告服务</string>
    <string name="export_directly">直接导出</string>
    <string name="export_txt">导出为文本</string>
    <string name="export_csv">导出为表格</string>
    <string name="import_directly">直接导入</string>
    <string name="import_txt">从文本导入</string>
    <string name="import_excel">从csv表格导入</string>
    <string name="download_update">下载更新</string>
    <string name="download_continue">继续下载</string>
    <string name="refresh_date">更新数据</string>
    <string name="upload_data">上传单词数据</string>
    <string name="app_guide">App使用说明 V</string>
    <string name="setting">设置</string>
    <string name="choose_file_to_import">选择导入的文件</string>
    <string name="fail_to_launch_file_manager">启动文件管理器失败</string>
    <string name="file_path_error">文件路径出错</string>
    <string name="file_type_error">所选文件格式错误</string>
    <string name="word_lib">单词库</string>
    <string name="start_import">开始导入</string>
    <string name="delete_old_word">删除已有单词数据</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="permission">权限</string>
    <string name="app_should_permission_notice">应用需要权限才能运行</string>
    <string name="apply_success">申请成功！</string>
    <string name="feedback_method">联系方式:</string>
    <string name="feedback_contact">选填(QQ、微信、手机号码、邮箱)，便于我们联系您解决，我们将会抽取部分用户进行有奖调查</string>
    <string name="feedback_comment">有什么不爽或建议尽管吐槽吧，我们会努力改进的。</string>
    <string name="feedback_commit">提交反馈</string>
    <string name="feedback_title">意见反馈</string>
    <string name="feedback_des">问题描述:</string>
    <string name="feedback_has_commit">反馈已提交</string>
    <string name="commit_success_thanks">提交成功，感谢您的反馈!</string>
    <string name="record_success_thanks">记录成功，感谢您的反馈!</string>
    <string name="network_error_try_latter">网络或服务器出错，请稍后再试！</string>
    <string name="setting_permission_guide">\n请在"应用设置-权限"中，允许权限</string>
    <string name="go_to_permit">去允许</string>
    <string name="user_agreement_content">"
       欢迎光临记忆笔记APP（以下统称称本app），请您仔细阅读以下条款，如果您对本协议的任何条款表示异议，您可以选择不使用本app；进入本app则意味着您将同意遵守本协议下全部规定，并完全服从于app开发者的统一管理。 

第一章 总则

第1条 本app是app开发者向用户提供的趣味图片查找，编辑的平台。

第2条 本app所有权、经营权、管理权均属app开发者。

第3条 本协议最终解释权归属app开发者。

第二章 app用户

第4条 凡是注册用户和浏览用户均为app用户（以下统称"用户"）。

第5条 用户的个人信息受到保护，不接受任何个人或单位的查询。国家机关依法查询除外，用户的个人设置公开除外。

第6条 用户享有言论自由的权利。

第7条 用户的言行不得违反《计算机信息网络国际联网安全保护管理办法》、《互联网信息服务管理办法》、《互联网电子公告服务管理规定》、《维护互联网安全的决定》、《互联网新闻信息服务管理规定》等相关法律规定，不得在本app发布、传播或以其它方式传送含有下列内容之一的信息：

1.反对宪法所确定的基本原则的；

2.危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的；

3.损害国家荣誉和利益的；

4.煽动民族仇恨、民族歧视、破坏民族团结的；

5.破坏国家宗教政策，宣扬邪教和封建迷信的；

6.散布谣言，扰乱社会秩序，破坏社会稳定的；

7.散布淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的；

8.侮辱或者诽谤他人，侵害他人合法权利的；

9.煽动非法集会、结社、游行、示威、聚众扰乱社会秩序的；

10.以非法民间组织名义活动的；

11.含有虚假、有害、胁迫、侵害他人隐私、骚扰、侵害、中伤、粗俗、猥亵、或其它道德上令人反感的内容；

12.含有中国法律、法规、规章、条例以及任何具有法律效力之规范所限制或禁止的其它内容的。

第8条 用户不得在app内发布任何形式的广告，包括但不限于：

1.发布带有任何有联系方式的网络创业、网络兼职、刷Q币以及非真实性中奖信息；

2.内容包含带有任何联系方式的学历职称代办，专业代做试题，作业，论文等题目以及售卖考试答案等信息；

3.发布任何带有联系方式的银行卡代办、买卖发票、非法彩票等信息；

4.含有联系方式的黑客、收费删帖、办证刻章等违法信息；

5.非官方认证的发布任何带有联系方式的医院、美容、药品、祛斑、医生专家和整容等信息。

第9条 用户应承担一切因其个人的行为而直接或间接导致的民事或刑事法律责任，因用户行为给app开发者造成损失的，用户应负责赔偿。 

第10条 app开发者拥有对违反本app规则的用户进行处理的权力，直至禁止其在本app内发布信息。

第11条 禁止任何使用非法软件进行灌水、违规发布内容的行为。

第12条 任何用户发现app内容涉嫌侮辱或者诽谤他人、侵害他人合法权益的，有权按app投诉规则进行投诉。

第13条 为了能够给广大用户提供一个优质的交流平台，同时使app能够良性、健康的发展，将对涉及反动、色情的头像、签名档和发布不良内容的用户，进行严厉处理。一经发现此类行为，将给予永久封禁ID并清空所有发言的处罚。

第三章 权利声明

第14条 app内容由用户创建，发布的内容或者文章仅代表作者观点，与app开发者无关。对于用户言论的真实性引发的全部责任，由用户自行承担，app开发者不承担任何责任。

第15条 用户之间因使用app而产生或可能产生的任何纠纷和/或损失，由用户自行解决并承担相应的责任，与app开发者无关。

第16条 用户在app发表的作品，app开发者有权转载或引用，无需通知用户。

第17条 用户在任何时间段在app发表的任何内容（包括自拍）的著作财产权，用户许可app开发者在全世界范围内免费地、永久性地、不可撤销地、可分许可地和非独家地使用的权利，包括但不限于：复制权、发行权、出租权、展览权、表演权、放映权、广播权、信息网络传播权、摄制权、改编权、翻译权、汇编权以及《著作权法》规定的由著作权人享有的其他著作财产权利。并且，用户许可app开发者有权利就任何主体侵权而单独提起诉讼，并获得全部赔偿。

第四章 处罚规则

第18条 app开发者郑重提醒用户，若出现下列情况任意一种或几种，将承担包括被关闭全部或者部分权限、被暂停或被删除其帐号的后果，情节严重的，还将承担相应的法律责任。 

1.使用不雅或不恰当ID和昵称；

2.发表含有猥亵、色情、人身攻击和反政府言论等非法或侵权言论的；

3.从事非法商业活动；

4.模仿贴吧管理人员ID或者他人ID，用以假冒管理人员或破坏管理人员形象；

5.使用发贴机等非法软件进行爆吧、违规发贴的行为。

6.其他app开发者认为不恰当的情况。

第19条 凡文章出现以下情况之一，app管理人员有权不提前通知作者直接删除，并依照有关规定作相应处罚。情节严重者，app管理人员有权对其做出关闭部分权限、暂停直至删除其帐号。 

1.发表含有本协议第7条禁止发布、传播内容的文章； 

2.发表不符合版面主题，或者无内容的灌水文章；

3.同一文章多次出现的； 

4.违反本协议第8条的规定，发布广告的；

5.文章内容或个人签名会包含有严重影响用户浏览的内容或格式的；

6.其他app开发者认为不恰当的情况。

第五章 附则

第20条 关于打击网络谣言的司法解释：《最高人民法院、最高人民检察院关于办理利用信息网络实施诽谤等刑事案件适用法律若干问题的解释》已于2013年9月5日由最高人民法院审判委员会第1589次会议、2013年9月2日由最高人民检察院第十二届检察委员会第9次会议通过，现予公布，自2013年9月10日起施行。

第21条 所有用户发表的文章而引起的法律纠纷，与app开发者无关。 

第22条 app如因系统维护或升级等而需暂停服务时，将事先公告。若因硬件故障或其它不可抗力而导致暂停服务，于暂停服务期间造成的一切不便与损失，本贴吧不负任何责任。 由于app的调整导致信息丢失和/或其他结果的，app开发者不承担任何责任。

第23条 本协议未涉及的问题参见国家有关法律法规，当本协议与国家法律法规冲突时，以国家法律法规为准。

文明上网七条底线

根据我国网络发展的现状，国信办鲁炜主任提出了网络空间的“七条底线”，我们每位网民在自由表达自己意见和诉求的同时，也要遵守“七条底线”，文明上网，争做文明网民。 

七条底线

1.法律法规底线：有法可依、有法必依、执法必严、违法必究，任何时候，无论是网上网下，都将始终做到违法必究；

2.社会主义制度底线，为我们全面建成小康社会提供了有力地制度保障，我们要积极拥护社会主义及社会主义制度；

3.国家利益底线，作为国家公民，时刻维护我们伟大祖国的利益，这也是宪法赋予我们每位公民的光荣义务；

4.公民合法权益底线，我们在网络反腐的同时，切记不能以“艳照”等不健康、不正当甚至违法手段对别人进行人身攻击，否则不仅触犯法律，也侵犯了无辜者的合法权益；

5.社会公共秩序底线，网络世界必须也要遵循一定的秩序规则，唯有如此大家才能营造一个良好健康的网络环境；

6.道德风尚底线，崇尚美德在我国延续几千年的优秀传统，网络空间里也要讲道德，不做有违道德之事；

7.信息真实性底线，要求我们在上网时一定要实事求是，而不能以讹传讹、散发谣传，积极宣传政府部门发布的真实信息。

 七条底线是根本，不能突破；是方圆，不能逾越。我们广大网民积极宣传落实“七条底线”，争做文明网民，净化网络空间，还网络一片“蓝天”。"</string>
</resources>