<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_feed_back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:acContext="a.baozouptu.user.userSetting.FeedBackActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/setting_top_bar"
        style="@style/my_tool_bar"
        android:layout_width="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/setting_return_btn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:src="@drawable/ic_arrow_back_white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="反馈"
            android:textColor="@color/white"
            android:textSize="23sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/setting_return_btn"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        style="@style/setting_item_text"
        android:layout_margin="8dp"
        android:text="@string/feedback_des" />

    <EditText
        android:id="@+id/feedback_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="start|top"
        android:hint="@string/feedback_comment"
        android:minLines="6"
        android:padding="8dp" />

    <TextView
        style="@style/setting_item_text"
        android:layout_margin="8dp"
        android:text="@string/feedback_method"
        android:textColor="@color/text_deep_black" />

    <EditText
        android:id="@+id/feedback_contact_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="start|top"
        android:hint="@string/feedback_contact"
        android:minLines="4"
        android:padding="8dp"
        android:textColor="@color/text_deep_black" />

    <Button
        android:id="@+id/feedback_btn_commit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="8dp"
        android:text="@string/feedback_commit"
        android:textColor="@color/white" />
</LinearLayout>
